crates/axiom-parser/src/parser.rs
//! Recursive descent parser with Pratt expression parsing for AXIOM.
//!
//! The parser consumes a `Vec<Token>` from [`axiom_lexer::Lexer`] and produces
//! a typed [`Module`] AST. It recovers from errors by skipping to synchronization
//! points and collecting all errors rather than stopping at the first one.
//!
//! # Usage
//!
//! ```
//! use axiom_parser::parse;
//!
//! let result = parse("@module hello;\nfn main() -> i32 { return 0; }");
//! assert!(!result.has_errors());
//! ```

use axiom_lexer::{Lexer, Span, Token, TokenKind};

use crate::ast::{
    Annotation, AnnotationValue, BinOp, Block, DimExpr, Expr, ExternFunction, Function,
    ImportDecl, InlineHint, Item, LayoutKind, Module, Param, Spanned, StrategyBlock,
    StrategyValue, StructDef, StructField, Stmt, TransferBlock, TypeAlias, TypeExpr, UnaryOp,
};
use crate::error::{span_to_source_span, ParseError, ParseResult};

/// Parse an AXIOM source string into a [`Module`] AST.
///
/// This is the main entry point for the parser. It lexes the source text and
/// then runs the recursive descent parser, collecting all errors along the way.
///
/// # Examples
///
/// ```
/// let result = axiom_parser::parse("fn main() -> i32 { return 0; }");
/// assert!(!result.has_errors());
/// assert_eq!(result.module.items.len(), 1);
/// ```
pub fn parse(source: &str) -> ParseResult {
    let (tokens, lex_errors) = Lexer::new(source).tokenize();
    let mut parser = Parser::new(source, tokens);

    // Forward lexer errors
    for err_tok in &lex_errors {
        if let TokenKind::Error(msg) = &err_tok.kind {
            parser.errors.push(ParseError::LexerError {
                message: msg.clone(),
                span: span_to_source_span(err_tok.span),
            });
        }
    }

    let module = parser.parse_module();
    ParseResult {
        module,
        errors: parser.errors,
    }
}

/// Recursive descent parser for AXIOM source.
pub(crate) struct Parser<'src> {
    source: &'src str,
    tokens: Vec<Token>,
    pos: usize,
    errors: Vec<ParseError>,
    depth: u32,
}

/// Maximum nesting depth to prevent stack overflow on adversarial input.
const MAX_DEPTH: u32 = 256;

impl<'src> Parser<'src> {
    /// Create a new parser from source text and a pre-lexed token stream.
    pub(crate) fn new(source: &'src str, tokens: Vec<Token>) -> Self {
        Self {
            source,
            tokens,
            pos: 0,
            errors: Vec::new(),
            depth: 0,
        }
    }

    // ── Token navigation ───────────────────────────────────────────────

    /// Peek at the current token's kind without consuming it.
    fn peek(&self) -> &TokenKind {
        self.tokens
            .get(self.pos)
            .map(|t| &t.kind)
            .unwrap_or(&TokenKind::Eof)
    }

    /// Peek at the token `n` positions ahead.
    fn peek_nth(&self, n: usize) -> &TokenKind {
        self.tokens
            .get(self.pos + n)
            .map(|t| &t.kind)
            .unwrap_or(&TokenKind::Eof)
    }

    /// Get the span of the current token.
    fn current_span(&self) -> Span {
        self.tokens
            .get(self.pos)
            .map(|t| t.span)
            .unwrap_or_else(|| {
                // EOF span: point at end of last token or start of source
                self.tokens
                    .last()
                    .map(|t| t.span)
                    .unwrap_or(Span::new(0, 0))
            })
    }

    /// Get the span of the previous token (for error reporting after advance).
    fn prev_span(&self) -> Span {
        if self.pos > 0 {
            self.tokens[self.pos - 1].span
        } else {
            Span::new(0, 0)
        }
    }

    /// Advance to the next token, returning the consumed token.
    fn advance(&mut self) -> &Token {
        let tok = &self.tokens[self.pos];
        if tok.kind != TokenKind::Eof {
            self.pos += 1;
        }
        tok
    }

    /// Check if we have reached the end of the token stream.
    fn at_end(&self) -> bool {
        matches!(self.peek(), TokenKind::Eof)
    }

    /// Check if the current token matches the given kind (discriminant only).
    fn check(&self, kind: &TokenKind) -> bool {
        std::mem::discriminant(self.peek()) == std::mem::discriminant(kind)
    }

    /// Check if the current token is an `Ident` with a specific name.
    fn check_ident(&self, name: &str) -> bool {
        matches!(self.peek(), TokenKind::Ident(s) if s == name)
    }

    /// Consume the current token if it matches the given kind (discriminant).
    /// Returns `true` on match.
    fn eat(&mut self, kind: &TokenKind) -> bool {
        if self.check(kind) {
            self.advance();
            true
        } else {
            false
        }
    }

    /// Consume the current token if it matches, otherwise record an error.
    /// Returns the token's span on success, `None` on failure.
    fn expect(&mut self, kind: &TokenKind, expected_desc: &str) -> Option<Span> {
        if self.check(kind) {
            let span = self.current_span();
            self.advance();
            Some(span)
        } else if self.at_end() {
            self.errors.push(ParseError::UnexpectedEof {
                expected: expected_desc.to_string(),
                span: span_to_source_span(self.current_span()),
            });
            None
        } else {
            self.errors.push(ParseError::UnexpectedToken {
                expected: expected_desc.to_string(),
                found: format!("{:?}", self.peek()),
                span: span_to_source_span(self.current_span()),
            });
            None
        }
    }

    /// Consume and return the identifier string if the current token is `Ident`.
    fn eat_ident(&mut self) -> Option<(String, Span)> {
        if let TokenKind::Ident(_) = self.peek() {
            let span = self.current_span();
            let tok = self.advance().clone();
            if let TokenKind::Ident(name) = tok.kind {
                return Some((name, span));
            }
        }
        None
    }

    /// Expect an identifier, recording an error if not found.
    fn expect_ident(&mut self, context: &str) -> Option<(String, Span)> {
        if let Some(result) = self.eat_ident() {
            Some(result)
        } else if self.at_end() {
            self.errors.push(ParseError::UnexpectedEof {
                expected: format!("identifier ({context})"),
                span: span_to_source_span(self.current_span()),
            });
            None
        } else {
            // Check for type keywords used as identifiers (common in types)
            if let Some(name) = self.try_eat_type_keyword_as_ident() {
                return Some(name);
            }
            self.errors.push(ParseError::UnexpectedToken {
                expected: format!("identifier ({context})"),
                found: format!("{:?}", self.peek()),
                span: span_to_source_span(self.current_span()),
            });
            None
        }
    }

    /// Try to eat a type keyword token and return it as an identifier string.
    /// This allows using type keywords like `i32`, `f64` etc. as type names.
    fn try_eat_type_keyword_as_ident(&mut self) -> Option<(String, Span)> {
        let name = match self.peek() {
            TokenKind::I8 => "i8",
            TokenKind::I16 => "i16",
            TokenKind::I32 => "i32",
            TokenKind::I64 => "i64",
            TokenKind::I128 => "i128",
            TokenKind::U8 => "u8",
            TokenKind::U16 => "u16",
            TokenKind::U32 => "u32",
            TokenKind::U64 => "u64",
            TokenKind::U128 => "u128",
            TokenKind::F16 => "f16",
            TokenKind::Bf16 => "bf16",
            TokenKind::F32 => "f32",
            TokenKind::F64 => "f64",
            TokenKind::Bool => "bool",
            _ => return None,
        };
        let span = self.current_span();
        self.advance();
        Some((name.to_string(), span))
    }

    /// Consume an optional semicolon. Returns true if consumed.
    fn eat_semicolon(&mut self) -> bool {
        self.eat(&TokenKind::Semicolon)
    }

    /// Expect a semicolon with smart recovery: if the next token starts a
    /// new statement, record an error but do NOT consume that token.
    fn expect_semicolon(&mut self) {
        if !self.eat(&TokenKind::Semicolon) {
            // Check if the next token could start a new statement
            let can_recover = matches!(
                self.peek(),
                TokenKind::Let
                    | TokenKind::Return
                    | TokenKind::Break
                    | TokenKind::Continue
                    | TokenKind::If
                    | TokenKind::For
                    | TokenKind::While
                    | TokenKind::RBrace
                    | TokenKind::Fn
                    | TokenKind::Eof
            ) || matches!(self.peek(), TokenKind::Annotation(_));

            if can_recover {
                self.errors.push(ParseError::MissingSemicolon {
                    span: span_to_source_span(self.prev_span()),
                });
            } else {
                self.errors.push(ParseError::MissingSemicolon {
                    span: span_to_source_span(self.prev_span()),
                });
                // Skip the unexpected token
                self.advance();
            }
        }
    }

    /// Skip tokens that are lexer errors, recording them.
    fn skip_error_tokens(&mut self) {
        while let TokenKind::Error(msg) = self.peek() {
            let msg = msg.clone();
            let span = self.current_span();
            self.errors.push(ParseError::LexerError {
                message: msg,
                span: span_to_source_span(span),
            });
            self.advance();
        }
    }

    // ── Error recovery / synchronization ──────────────────────────────

    /// Skip tokens until we reach a statement-level synchronization point.
    fn synchronize_stmt(&mut self) {
        loop {
            match self.peek() {
                TokenKind::Semicolon => {
                    self.advance();
                    return;
                }
                TokenKind::RBrace
                | TokenKind::Let
                | TokenKind::Return
                | TokenKind::Break
                | TokenKind::Continue
                | TokenKind::If
                | TokenKind::For
                | TokenKind::While
                | TokenKind::Fn
                | TokenKind::Eof => return,
                _ => {
                    if matches!(self.peek(), TokenKind::Annotation(_)) {
                        return;
                    }
                    self.advance();
                }
            }
        }
    }

    /// Skip tokens until we reach an item-level synchronization point.
    fn synchronize_item(&mut self) {
        loop {
            match self.peek() {
                TokenKind::Fn
                | TokenKind::Extern
                | TokenKind::Struct
                | TokenKind::Type
                | TokenKind::Import
                | TokenKind::Eof => return,
                _ => {
                    if matches!(self.peek(), TokenKind::Annotation(_)) {
                        return;
                    }
                    self.advance();
                }
            }
        }
    }

    // ── Top-level parsing ─────────────────────────────────────────────

    /// Parse a complete AXIOM module.
    ///
    /// Module-level annotations (like `@module name;`, `@intent("...");`,
    /// `@constraint { ... };`, `@target { ... };`) are terminated by `;`.
    /// Annotations that appear without a trailing `;` before an item keyword
    /// belong to that item.
    pub(crate) fn parse_module(&mut self) -> Module {
        let mut module_name: Option<Spanned<String>> = None;
        let mut module_annotations: Vec<Spanned<Annotation>> = Vec::new();
        let mut items: Vec<Spanned<Item>> = Vec::new();

        // Parse module-level annotations.
        // Strategy: annotations followed by `;` are module-level.
        // When we see annotations NOT followed by `;`, they belong to
        // the next item, so we stop collecting module annotations.
        while matches!(self.peek(), TokenKind::Annotation(_)) && !self.at_end() {
            self.skip_error_tokens();

            // Check if this annotation is followed by `;` (module-level)
            // or by an item keyword (item-level). We use save/restore of
            // position to peek ahead.
            let saved_pos = self.pos;
            let saved_errors_len = self.errors.len();

            if let Some(ann) = self.parse_annotation() {
                // Check if a semicolon follows — if so, it's module-level
                if self.check(&TokenKind::Semicolon) {
                    self.eat_semicolon();
                    if let Annotation::Module(ref name) = ann.node {
                        module_name = Some(Spanned::new(name.clone(), ann.span));
                    }
                    module_annotations.push(ann);
                } else {
                    // No semicolon — this annotation (and any following)
                    // belongs to the next item. Restore position.
                    self.pos = saved_pos;
                    self.errors.truncate(saved_errors_len);
                    break;
                }
            } else {
                break;
            }
        }

        // Parse items
        while !self.at_end() {
            self.skip_error_tokens();
            if self.at_end() {
                break;
            }

            if let Some(item) = self.parse_item() {
                items.push(item);
            } else {
                // Error recovery: skip to next item
                if !self.at_end() {
                    self.synchronize_item();
                }
            }
        }

        Module {
            name: module_name,
            annotations: module_annotations,
            items,
        }
    }

    /// Parse a single top-level item (function, struct, type alias, import).
    fn parse_item(&mut self) -> Option<Spanned<Item>> {
        // Collect annotations preceding the item
        let annotations = self.parse_annotations();

        match self.peek() {
            TokenKind::Fn => Some(self.parse_function(annotations)),
            TokenKind::Extern => Some(self.parse_extern_function(annotations)),
            TokenKind::Struct => Some(self.parse_struct(annotations)),
            TokenKind::Type => Some(self.parse_type_alias(annotations)),
            TokenKind::Import => Some(self.parse_import(annotations)),
            _ => {
                if !self.at_end() {
                    self.errors.push(ParseError::UnexpectedToken {
                        expected: "item (fn, extern, struct, type, or import)".to_string(),
                        found: format!("{:?}", self.peek()),
                        span: span_to_source_span(self.current_span()),
                    });
                }
                None
            }
        }
    }

    // ── Annotations ───────────────────────────────────────────────────

    /// Collect all leading annotations.
    fn parse_annotations(&mut self) -> Vec<Spanned<Annotation>> {
        let mut annotations = Vec::new();
        while matches!(self.peek(), TokenKind::Annotation(_)) {
            if let Some(ann) = self.parse_annotation() {
                annotations.push(ann);
            }
            // Eat optional semicolons after annotations
            self.eat_semicolon();
        }
        annotations
    }

    /// Parse a single annotation.
    fn parse_annotation(&mut self) -> Option<Spanned<Annotation>> {
        let start_span = self.current_span();
        let name = if let TokenKind::Annotation(name) = self.peek() {
            let n = name.clone();
            self.advance();
            n
        } else {
            return None;
        };

        let annotation = match name.as_str() {
            "pure" => Annotation::Pure,
            "const" => Annotation::Const,
            "module" => {
                // @module name — the name is the next identifier
                if let Some((mod_name, _)) = self.eat_ident() {
                    Annotation::Module(mod_name)
                } else {
                    self.errors.push(ParseError::InvalidAnnotation {
                        name: "module".to_string(),
                        reason: "expected module name".to_string(),
                        span: span_to_source_span(start_span),
                    });
                    return None;
                }
            }
            "inline" => {
                // @inline(always|never|hint)
                if self.eat(&TokenKind::LParen) {
                    let hint = if self.check_ident("always") {
                        self.advance();
                        InlineHint::Always
                    } else if self.check_ident("never") {
                        self.advance();
                        InlineHint::Never
                    } else if self.check_ident("hint") {
                        self.advance();
                        InlineHint::Hint
                    } else {
                        self.errors.push(ParseError::InvalidAnnotation {
                            name: "inline".to_string(),
                            reason: "expected always, never, or hint".to_string(),
                            span: span_to_source_span(self.current_span()),
                        });
                        InlineHint::Hint
                    };
                    self.expect(&TokenKind::RParen, "')'");
                    Annotation::Inline(hint)
                } else {
                    Annotation::Inline(InlineHint::Hint)
                }
            }
            "intent" => {
                // @intent("description")
                if self.eat(&TokenKind::LParen) {
                    if let TokenKind::StringLiteral(_) = self.peek() {
                        let tok = self.advance().clone();
                        if let TokenKind::StringLiteral(s) = tok.kind {
                            self.expect(&TokenKind::RParen, "')'");
                            Annotation::Intent(s)
                        } else {
                            Annotation::Intent(String::new())
                        }
                    } else {
                        self.errors.push(ParseError::InvalidAnnotation {
                            name: "intent".to_string(),
                            reason: "expected string literal".to_string(),
                            span: span_to_source_span(self.current_span()),
                        });
                        self.expect(&TokenKind::RParen, "')'");
                        Annotation::Intent(String::new())
                    }
                } else {
                    Annotation::Intent(String::new())
                }
            }
            "export" => Annotation::Export,
            "complexity" => {
                // @complexity O(n^3) — collect tokens until next annotation/fn/semicolon/brace
                let complexity_start = self.current_span().start;
                let mut complexity_end = complexity_start;
                while !matches!(
                    self.peek(),
                    TokenKind::Fn
                        | TokenKind::Semicolon
                        | TokenKind::LBrace
                        | TokenKind::Eof
                ) && !matches!(self.peek(), TokenKind::Annotation(_))
                {
                    complexity_end = self.current_span().end;
                    self.advance();
                }
                let text = if complexity_end > complexity_start {
                    self.source[complexity_start as usize..complexity_end as usize].trim().to_string()
                } else {
                    String::new()
                };
                Annotation::Complexity(text)
            }
            "constraint" => {
                // @constraint { key: value, ... }
                if self.eat(&TokenKind::LBrace) {
                    let kvs = self.parse_annotation_kv_list();
                    self.expect(&TokenKind::RBrace, "'}'");
                    Annotation::Constraint(kvs)
                } else {
                    Annotation::Constraint(Vec::new())
                }
            }
            "target" => {
                // @target { cpu.simd, gpu.compute }
                if self.eat(&TokenKind::LBrace) {
                    let targets = self.parse_target_list();
                    self.expect(&TokenKind::RBrace, "'}'");
                    Annotation::Target(targets)
                } else {
                    Annotation::Target(Vec::new())
                }
            }
            "strategy" => {
                // @strategy { key: value, ... }
                if self.eat(&TokenKind::LBrace) {
                    let block = self.parse_strategy_block();
                    self.expect(&TokenKind::RBrace, "'}'");
                    Annotation::Strategy(block)
                } else {
                    Annotation::Strategy(StrategyBlock {
                        entries: Vec::new(),
                    })
                }
            }
            "transfer" => {
                // @transfer { source_agent: "...", target_agent: "...", ... }
                if self.eat(&TokenKind::LBrace) {
                    let kvs = self.parse_annotation_kv_list();
                    self.expect(&TokenKind::RBrace, "'}'");
                    let mut source_agent = None;
                    let mut target_agent = None;
                    let mut context = None;
                    let mut open_questions = Vec::new();
                    let mut confidence = None;
                    for (key, val) in &kvs {
                        match key.as_str() {
                            "source_agent" => {
                                if let AnnotationValue::String(s) = val {
                                    source_agent = Some(s.clone());
                                }
                            }
                            "target_agent" => {
                                if let AnnotationValue::String(s) = val {
                                    target_agent = Some(s.clone());
                                }
                            }
                            "context" => {
                                if let AnnotationValue::String(s) = val {
                                    context = Some(s.clone());
                                }
                            }
                            "open_questions" => {
                                if let AnnotationValue::List(items) = val {
                                    for item in items {
                                        if let AnnotationValue::String(s) = item {
                                            open_questions.push(s.clone());
                                        }
                                    }
                                }
                            }
                            "confidence" => {
                                if let AnnotationValue::Map(entries) = val {
                                    let mut correctness = 0.0;
                                    let mut optimality = 0.0;
                                    for (ck, cv) in entries {
                                        match ck.as_str() {
                                            "correctness" => {
                                                if let AnnotationValue::Float(f) = cv {
                                                    correctness = *f;
                                                } else if let AnnotationValue::Int(i) = cv {
                                                    correctness = *i as f64;
                                                }
                                            }
                                            "optimality" => {
                                                if let AnnotationValue::Float(f) = cv {
                                                    optimality = *f;
                                                } else if let AnnotationValue::Int(i) = cv {
                                                    optimality = *i as f64;
                                                }
                                            }
                                            _ => {}
                                        }
                                    }
                                    confidence = Some((correctness, optimality));
                                }
                            }
                            _ => {}
                        }
                    }
                    Annotation::Transfer(TransferBlock {
                        source_agent,
                        target_agent,
                        context,
                        open_questions,
                        confidence,
                    })
                } else {
                    Annotation::Transfer(TransferBlock {
                        source_agent: None,
                        target_agent: None,
                        context: None,
                        open_questions: Vec::new(),
                        confidence: None,
                    })
                }
            }
            "vectorizable" => {
                // @vectorizable(i, j, k)
                let dims = self.parse_ident_list_in_parens();
                Annotation::Vectorizable(dims)
            }
            "parallel" => {
                // @parallel(i, j)
                let dims = self.parse_ident_list_in_parens();
                Annotation::Parallel(dims)
            }
            "parallel_for" => {
                // @parallel_for(shared_read: [a, b], shared_write: [c], reduction(+: sum), private: [tmp])
                self.parse_parallel_for_annotation()
            }
            "layout" => {
                // @layout(row_major|col_major|custom)
                if self.eat(&TokenKind::LParen) {
                    let kind = if self.check_ident("row_major") {
                        self.advance();
                        LayoutKind::RowMajor
                    } else if self.check_ident("col_major") {
                        self.advance();
                        LayoutKind::ColMajor
                    } else if let Some((name, _)) = self.eat_ident() {
                        LayoutKind::Custom(name)
                    } else {
                        LayoutKind::RowMajor
                    };
                    self.expect(&TokenKind::RParen, "')'");
                    Annotation::Layout(kind)
                } else {
                    Annotation::Layout(LayoutKind::RowMajor)
                }
            }
            "align" => {
                // @align(64)
                if self.eat(&TokenKind::LParen) {
                    let value = if let TokenKind::IntLiteral { value, .. } = self.peek() {
                        let v = *value as u64;
                        self.advance();
                        v
                    } else {
                        0
                    };
                    self.expect(&TokenKind::RParen, "')'");
                    Annotation::Align(value)
                } else {
                    Annotation::Align(0)
                }
            }
            "lifetime" => {
                // @lifetime(scope|static|manual)
                if self.eat(&TokenKind::LParen) {
                    let scope = if let Some((name, _)) = self.eat_ident() {
                        name
                    } else {
                        "scope".to_string()
                    };
                    self.expect(&TokenKind::RParen, "')'");
                    Annotation::Lifetime(scope)
                } else {
                    Annotation::Lifetime("scope".to_string())
                }
            }
            "link" => {
                // @link("library_name") or @link("library_name", "kind")
                if self.eat(&TokenKind::LParen) {
                    let lib = if let TokenKind::StringLiteral(ref s) = self.peek() {
                        let s = s.clone();
                        self.advance();
                        s
                    } else {
                        self.errors.push(ParseError::InvalidAnnotation {
                            name: "link".to_string(),
                            reason: "expected library name string".to_string(),
                            span: span_to_source_span(self.current_span()),
                        });
                        String::new()
                    };
                    let kind = if self.eat(&TokenKind::Comma) {
                        if let TokenKind::StringLiteral(ref s) = self.peek() {
                            let s = s.clone();
                            self.advance();
                            Some(s)
                        } else {
                            None
                        }
                    } else {
                        None
                    };
                    self.expect(&TokenKind::RParen, "')'");
                    Annotation::Link { library: lib, kind }
                } else {
                    self.errors.push(ParseError::InvalidAnnotation {
                        name: "link".to_string(),
                        reason: "expected '(' after @link".to_string(),
                        span: span_to_source_span(self.current_span()),
                    });
                    Annotation::Link { library: String::new(), kind: None }
                }
            }
            "strict" => Annotation::Strict,
            "trace" => Annotation::Trace,
            "precondition" => {
                // @precondition(expr)
                self.expect(&TokenKind::LParen, "'('");
                let expr = self.parse_expr();
                self.expect(&TokenKind::RParen, "')'");
                Annotation::Precondition(Box::new(expr))
            }
            "postcondition" => {
                // @postcondition(expr)
                self.expect(&TokenKind::LParen, "'('");
                let expr = self.parse_expr();
                self.expect(&TokenKind::RParen, "')'");
                Annotation::Postcondition(Box::new(expr))
            }
            "test" => {
                // @test { input: (args...), expect: value }
                self.expect(&TokenKind::LBrace, "'{'");
                let mut inputs = Vec::new();
                let mut expected = Expr::IntLiteral(0);
                // Parse key: value pairs
                while !self.check(&TokenKind::RBrace) && !self.check(&TokenKind::Eof) {
                    let key = match self.peek() {
                        TokenKind::Ident(ref n) => n.clone(),
                        _ => {
                            self.errors.push(ParseError::InvalidAnnotation {
                                name: "test".to_string(),
                                reason: "expected 'input' or 'expect'".to_string(),
                                span: span_to_source_span(self.current_span()),
                            });
                            break;
                        }
                    };
                    self.advance();
                    self.expect(&TokenKind::Colon, "':'");
                    if key == "input" {
                        self.expect(&TokenKind::LParen, "'('");
                        while !self.check(&TokenKind::RParen) && !self.check(&TokenKind::Eof) {
                            inputs.push(self.parse_expr());
                            if !self.eat(&TokenKind::Comma) {
